--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
                 <br>
                 <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in th ecity or on your next road trip.</p>
                 <br>
-                <ul>
-                    <li><a href="">Learn More</a></li>
-                </ul>
+                <a href="">Learn More</a>
             </div>
             </box>
             <box class="box2">
@@ -32,9 +30,7 @@
                 <br>
                 <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
                 <br>
-                <ul>
-                    <li><a href="">Learn More</a></li>
-                </ul>
+                <a href="">Learn More</a>
             </div>
             </box>
             <box class="box3">
@@ -43,9 +39,7 @@
                 <br>
                 <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
                 <br>
-                <ul>
-                    <li><a href="">Learn More</a></li>
-                </ul>
+                <a href="">Learn More</a>
             </div>
             </box>
         </div>
